# RenderYZM

./: CMakeLists.txt  README.md  main.cpp
assets/floor/: floor.blend  floor.blend1  floor.mtl
shader/: 1.model_loading.vs
shaders/: 1.model_loading.vs  depthShader.vs  light.fs  light.vs  model.fs  model.vs  normal.gs  normal.vs
src/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
